--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -6,7 +6,7 @@ name: youth_read
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/29 1-23 * * *'
+     - cron: '*/14 * * *'
   watch:
     types: started
 jobs:
